# autonomous-car-jetson-nx

./: .gitignore  CAMERA_DEBUG_SOLUTION.md  README.md  bluetooth_readme_section.md  capture_image.sh  check_environment.sh  conservative_fix.sh  custom_packages.txt  data.md  diagnostic_commands.sh  env.yaml  filtered_requirements.txt  gen_ros_report.sh  kill_car_system.sh  opencv_gstreamer_status.txt  pip_only_packages.txt  quick_setup_fix.py  requirements.txt  ros_dependencies_report.txt  ros_summary.txt  run.sh  t basic camera access  test_ros2.py  todo_inference_integration.md  user_requirements.txt
pytorch_scripts/: README.md  balance_data.py  combine_datasets.py  inference_jetson.py  strong_augmentations.py  train_w_GC.py  train_w_GC_2_GPUs.py
src/bag_tools/: bag_diagnostics.py  behavior_analysis.py  car_data_video_generator.html  car_video_generator_python.py  debug_extractor.py  extract_any_bag.py  extract_bag_data.py  extract_bc_data.py  extract_images_fixed.py  video_generator.py
src/car_bringup/: package.xml  setup.cfg  setup.py
src/car_control/: package.xml  setup.py
src/car_description/: package.xml  setup.cfg  setup.py
src/car_drivers/: package.xml  setup.cfg  setup.py
src/car_inference/: package.xml  setup.cfg  setup.py
src/car_inference/car_inference/: inference_node.py  model_manager.py  safety_monitor.py
src/car_inference/config/: inference_config.yaml
src/car_inference/launch/: car_inference.launch.py  test_inference.launch.py
src/car_msgs/: CMakeLists.txt  package.xml
src/car_navigation/: package.xml  setup.cfg  setup.py
src/car_perception/: package.xml  setup.cfg  setup.py
src/car_teleop/: package.xml  setup.cfg  setup.py
src/car_web_streamer/: package.xml  setup.cfg  setup.py
src/car_web_streamer/car_web_streamer/: web_image_streamer.py
(+30 files in other folders)
